basic test, retrieve url, get hostname, stock it simply using localStorage

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,6 +1,12 @@
 <html>
   <body>
-    <h1>Hello World</h1>
+    <h1>Password Manager</h1>
+    <p >Ceci est un super test</p> 
+    <button id="get-url-button">Ajouter URL</button>
+    <button id="reveal-button">Reveal</button>
+    <p id="URL">Y'a pas d'url tqt</p>
+    <p id="stockage">stockage maggle</p>
     <script src="popup.js"></script>
+    <link rel="stylesheet" href="popup.css">
   </body>
 </html>
