--- a/popup/popup.html
+++ b/popup/popup.html
@@ -2,10 +2,11 @@
   <body>
     <h1>Password Manager</h1>
     <p >Ceci est un super test</p> 
-    <button id="get-url-button">Ajouter URL</button>
-    <button id="reveal-button">Reveal</button>
-    <p id="URL">Y'a pas d'url tqt</p>
-    <p id="stockage">stockage maggle</p>
+    <button id="store-url-button">Store URL</button>
+    <button id="test-url-button">Test URL</button>
+    <button id="clear-db">Clear DB</button>
+    <p id="debug">DEBUG TEXT</p>
+    <p id="storage-url">stockage maggle</p>
     <script src="popup.js"></script>
     <link rel="stylesheet" href="popup.css">
   </body>
