--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,7 +4,7 @@
     <p >Ceci est un super test</p> 
     <button id="store-url-button">Store URL</button>
     <button id="test-url-button">Test URL</button>
-    <button id="clear-db">Clear DB</button>
+    <button id="clear-db-button">Clear DB</button>
     <p id="debug">DEBUG TEXT</p>
     <p id="storage-url">stockage maggle</p>
     <script src="popup.js"></script>
