--- a/popup/popup.html
+++ b/popup/popup.html
@@ -3,9 +3,10 @@
     <h1>Password Manager</h1>
     <p >Ceci est un super test</p> 
     <button id="store-url-button">Store URL</button>
+    <button id="show-url-button">Show URL</button>
     <button id="test-url-button">Test URL</button>
     <button id="clear-db-button">Clear DB</button>
-    <p id="debug">DEBUG TEXT</p>
+    <p id="debug-text">DEBUG TEXT</p>
     <p id="storage-url">stockage maggle</p>
     <script src="popup.js"></script>
     <link rel="stylesheet" href="popup.css">
