linked all previous functions to db.js

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,11 +4,10 @@
     <p >Ceci est un super test</p> 
     <button id="store-url-button">Store URL</button>
     <button id="show-url-button">Show URL</button>
-    <button id="test-url-button">Test URL</button>
     <button id="clear-db-button">Clear DB</button>
     <p id="debug-text">DEBUG TEXT</p>
     <p id="storage-url">stockage maggle</p>
-    <script src="popup.js"></script>
+    <script type="module" src="popup.js"></script>
     <link rel="stylesheet" href="popup.css">
   </body>
 </html>
