--- a/popup/popup.html
+++ b/popup/popup.html
@@ -5,6 +5,8 @@
     <button id="store-url-button">Store URL</button>
     <button id="show-url-button">Show URL</button>
     <button id="clear-db-button">Clear DB</button>
+    <input id="email">E-mail</input>
+    <input id="password">Password</input>
     <p id="debug-text">DEBUG TEXT</p>
     <p id="storage-url">stockage maggle</p>
     <script type="module" src="popup.js"></script>
