--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,11 +4,13 @@
     <p >Ceci est un super test</p> 
     <button id="store-url-button">Store URL</button>
     <button id="show-url-button">Show URL</button>
+    <button id="get-usr&pwd-button">Get Usr&Pwd URL</button>
     <button id="clear-db-button">Clear DB</button>
     <input id="email">E-mail</input>
     <input id="password">Password</input>
-    <p id="debug-text">DEBUG TEXT</p>
-    <p id="storage-url">stockage maggle</p>
+    <p>Logins</p>
+    <div id="vault">
+    </div>
     <script type="module" src="popup.js"></script>
     <link rel="stylesheet" href="popup.css">
   </body>
